Actualizando las páginas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Por Amor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./img/iso.ico"  type="image/x-icon">
-    <!-- linkear nuestro css -->
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="./css/bootstrap.css">
 
     <!-- linkear nuestro css -->
@@ -31,16 +31,16 @@
                     <a href="/">Inicio</a>
                 </li>
                 <li class="nav_item">
-                     <a href="#nosotros">Nosotros</a> <!--./paginas/nosotros.html -->
+                     <a href="#nosotros">Nosotros</a>
                 </li>
                 <li class="nav_item">
-                    <a href="#productos">Productos</a>
+                    <a href="./paginas/productos.html">Productos</a>
                 </li>
                 <li class="nav_item">
-                    <a href="#promociones">Promociones</a>
+                    <a href="./paginas/promociones.html">Promociones</a>
                 </li>
                 <li class="nav_item">
-                    <a href="#contactanos">Cont&#225;ctanos</a>
+                    <a href="./paginas/contactanos.html">Cont&#225;ctanos</a>
                 </li>
             </ul>
             
@@ -69,6 +69,7 @@
                 </a>
             </div>
         </section>
+
         <section id="nosotros" class="cont_gen_nos">
           <h2>Nosotros</h2>
           <section class="cont_nosotros">
@@ -80,8 +81,8 @@
               <img src="./img/pres_1b.png" alt="Imagen de regalo" class="card_img1">
             </div>
           </section>
-
         </section>
+
     </main>
     <!-- Fin main -->
     <!-- Footer -->
