--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -59,7 +59,7 @@
     <footer>
         <section class="pie_pag">
             <div class="cont1_pie">
-                <img src="./img/marca_por_amor.svg" alt="POR_AMOR" class="logo_footer mg_btm_pie">
+                <img src="../img/marca_por_amor.svg" alt="POR_AMOR" class="logo_footer mg_btm_pie">
                 <p class="text_gen_pie">Copyright &copy; 2023 POR AMOR | Todos los derechos reservados</p>
             </div>
             <div class="cont2_pie">
