Actualizando pagina contacto, index y hoja de estilo

--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -62,16 +62,32 @@
             <h2>Cont&#225;ctanos</h2>
           </div>
           <div class="content_contactanos">
-            <div class="row">
-              <div class="col-lg-6"></div>
+            <div class="row g-5">
               <div class="col-lg-6">
-                <div class="row">
-                  <div class="col-md-5"></div>
-                  <div class="col-md-4"></div>
-                  <div class="col-md-3"></div>
+                <div class="row pb-3">
+                  <article>
+                    <h1 class="c_s2 pdd_top">Trabajemos<span class="dp_block">juntos</span></h1>
+                    <p class="txt_descripcion_2 c_s1 pb-3">Queremos continuar brindando productos de calidad y un buen servicio.
+                    <span class="dp_block">Si deseas más información y/o tienes alguna consulta, envíanos un mensaje, también nos puedes encontrar en nuestras redes sociales.</span>
+                      </p>
+                    <ul class="ps-0">
+                      <li class="link_secc">
+                        <a href=""><i class="icn bi_fb"></i>Facebook</a>
+                      </li>
+                      <li class="link_secc">
+                        <a href=""><i class="icn bi_ig"></i>Instagram</a>
+                      </li>
+                    </ul>
+                    <p class="txt_descripcion_2 c_s1">Estamos atentos a tu solicitud.
+                      <!-- <span class="dp_block"><strong class="c_primary">POR AMOR</strong> te da las gracias por la preferencia.</span> -->
+                    </p>
+                  </article>
                 </div>
+              </div>
+              <div class="col-lg-6">
                 <div class="form">
                   <form method="post" action="/">
+                    <fieldset>
                     <div class="row">
                       <div class="mb-3 col-lg-6">
                         <label for="text" class="c_primary form-label">Nombre</label>
@@ -106,6 +122,8 @@
                         <textarea class="form-control" id="mensaje" rows="3" placeholder="Escribe aquí..." required></textarea>
                       </div>
                     </div>
+                    <button type="button" class="btn btn-primary">Primary</button>
+                  </fieldset>
                   </form>
                 </div>
               </div>
