--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <main class="cont_general">
         <section id="img_principal">
             <div id="txt_enunciado" class="ps_absolute ps_left ps_top">
-                <h1 class="txt_enun c_s1 pdd_top">Una manera<br>de mostrar amor</h1>
-                <p class="txt_descripcion c_s1 pdd_top">Descubre c&oacute;mo<br>en nuestro catálogo</p>
+                <h1 class="pdd_top">Una manera<span class="dp_block">de mostrar amor</span></h1>
+                <p class="txt_descripcion c_s1 pdd_top">Descubre c&oacute;mo<span class="dp_block">en nuestro catálogo</span></p>
                 <a href="" class="btn_desk text_Desk">Descarga
                     <img src="./img/descarga.svg" alt="descarga" class="img_descarga">
                 </a>
