Aplicando SASS, variables, nesting al proyecto

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             
             
             <ul id="menu" class="cont_nav">
-                <li class="nav_item">
+                <li class="nav_item active">
                     <a href="/">Inicio</a>
                 </li>
-                <li class="nav_item">
+                <li class="nav_item active">
                      <a href="#nosotros">Nosotros</a>
                 </li>
-                <li class="nav_item">
+                <li class="nav_item active">
                     <a href="./paginas/productos.html">Productos</a>
                 </li>
-                <li class="nav_item">
+                <li class="nav_item active">
                     <a href="./paginas/promociones.html">Promociones</a>
                 </li>
-                <li class="nav_item">
+                <li class="nav_item active">
                     <a href="./paginas/contactanos.html">Cont&#225;ctanos</a>
                 </li>
             </ul>
