Modificando SASS y CSS

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
             <input type="checkbox" id="check_menu">
             
             
-            <ul id="menu" class="cont_nav">
-                <li class="nav_item active">
+            <ul id="menu" class="nav__cont">
+                <li class="nav__item active">
                     <a href="/">Inicio</a>
                 </li>
-                <li class="nav_item active">
+                <li class="nav__item">
                      <a href="#nosotros">Nosotros</a>
                 </li>
-                <li class="nav_item active">
+                <li class="nav__item">
                     <a href="./paginas/productos.html">Productos</a>
                 </li>
-                <li class="nav_item active">
+                <li class="nav__item">
                     <a href="./paginas/promociones.html">Promociones</a>
                 </li>
-                <li class="nav_item active">
+                <li class="nav__item active">
                     <a href="./paginas/contactanos.html">Cont&#225;ctanos</a>
                 </li>
             </ul>
@@ -61,6 +61,7 @@
     <!-- Main -->
     <main class="cont_general">
         <section id="img_principal">
+            <img src="./img/portada.png" alt="">
             <div id="txt_enunciado" class="ps_absolute ps_left ps_top">
                 <h1 class="pdd_top">Una manera<span class="dp_block">de mostrar amor</span></h1>
                 <p class="txt_descripcion c_s1 pdd_top">Descubre c&oacute;mo<span class="dp_block">en nuestro catálogo</span></p>
