--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Main -->
     <main class="cont_general">
         <section id="img_principal">
-            <img src="./img/portada.png" alt="">
+            <img src="./img/portada.png" alt="imagen_de_portada_envolviendo_regalo_POR_AMOR">
             <div id="txt_enunciado" class="ps_absolute ps_left ps_top">
                 <h1 class="pdd_top">Una manera<span class="dp_block">de mostrar amor</span></h1>
                 <p class="txt_descripcion c_s1 pdd_top">Descubre c&oacute;mo<span class="dp_block">en nuestro catálogo</span></p>
