--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     </header>
     <!-- Fin de cabecera -->
     <!-- Main -->
-    <main class="cont_general">
+    <main class="ps_relative">
         <section id="img_principal">
             <img src="./img/portada.png" alt="imagen_de_portada_envolviendo_regalo_POR_AMOR">
-            <div id="txt_enunciado" class="ps_absolute ps_left ps_top">
-                <h1 class="pdd_top">Una manera<span class="dp_block">de mostrar amor</span></h1>
-                <p class="txt_descripcion c_s1 pdd_top">Descubre c&oacute;mo<span class="dp_block">en nuestro catálogo</span></p>
+            <div id="cont_enunciado" class="cont_portada ps_absolute">
+                <h1 class="pdd_bottom">Una manera<span class="dp_block">de mostrar amor</span></h1>
+                <p class="txt_descripcion">Descubre c&oacute;mo<span class="dp_block">en nuestro catálogo</span></p>
                 <a href="" class="btn_desk text_Desk">Descarga
                     <img src="./img/descarga.svg" alt="descarga" class="img_descarga">
                 </a>
