Actualizacion de SASS y HTML

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Regalos, una manera de mostrar amor, cariño o aprecio, más aún si son personalizados, encuentralos en POR AMOR">
     <title>Por Amor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./img/iso.ico"  type="image/x-icon">
@@ -59,11 +60,11 @@
     </header>
     <!-- Fin de cabecera -->
     <!-- Main -->
-    <main class="ps_relative">
-        <section id="img_principal">
-            <img src="./img/portada.png" alt="imagen_de_portada_envolviendo_regalo_POR_AMOR">
-            <div id="cont_enunciado" class="cont_portada ps_absolute">
-                <h1 class="pdd_bottom">Una manera<span class="dp_block">de mostrar amor</span></h1>
+    <main id=cont_gen">
+        <section id="img_principal" class="cont_gen_principal">
+            <img src="./img/portada.png" alt="imagen_de_portada_envolviendo_regalo_POR_AMOR" class="cont_img_prin">
+            <div id="cont_enunciado" class="cont_img_prin cont_portada">
+                <h1>Una manera<span class="dp_block">de mostrar amor</span></h1>
                 <p class="txt_descripcion">Descubre c&oacute;mo<span class="dp_block">en nuestro catálogo</span></p>
                 <a href="" class="btn_desk text_Desk">Descarga
                     <img src="./img/descarga.svg" alt="descarga" class="img_descarga">
