--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -56,7 +56,7 @@
         </nav>
     </header>
 
-    <main id="contactanos">
+    <main id="contactanos" class="cont_gen_cont">
         <section class="container-xxl">
           <div class="section_Subtitulo">
             <h2>Cont&#225;ctanos</h2>
